# moq-prototype

./: Cargo.toml  README.md  justfile
proto/: drone.proto
src/: lib.rs  unit.rs  unit_context.rs
src/drone/: error.rs  mod.rs
src/grpc/: mod.rs  server.rs
src/rpcmoq_lite/: error.rs  mod.rs
src/rpcmoq_lite/client/: client.rs  config.rs  mod.rs  rpc_client.rs
src/rpcmoq_lite/server/: config.rs  router.rs
src/state_machine/: command.rs  echo.rs  mod.rs  telemetry.rs
src/state_machine/wrappers/: mod.rs
src/state_machine/wrappers/input/: system.rs
src/state_machine/wrappers/output/: mod.rs
src/unit_map/: error.rs  mod.rs
src/unit_map/unit_ref/: error.rs  mod.rs
