[package]
name = "moq-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
async-stream = "0.3.6"
bon = "3.8.2"
bytes = "1.11.0"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
impl-trait-for-tuples = "0.2.3"
moq-lite = "0.12.0"
prost = "0.14.3"
rand = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }
web-transport-quinn = "0.11.0"

[build-dependencies]
prost-build = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
